2003-12-22  bulia byak <bulia@dr.com>

	* src/nodepath.cpp src/nodepath.h>: restrict control handle movement with ctrl, alt,
	shift; utility functions for radial coordinates; fixed several crashes when nodepath
	operations are called but there's no nodepath

	* src/desktop.cpp: filled in sp_desktop_set_coordinate_status implementation, added
	comment

2003-12-22  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/helper/bezier-utils.cpp (sp_darray_center_tangent,
	sp_darray_left_tangent, sp_darray_right_tangent),
	src/helper/bezier-utils.h, src/sp-spiral.h, src/sp-spiral.cpp
	(sp_spiral_get_tangent):
	Make these functions static.

	* src/helper/bezier-utils.cpp (GenerateBezier): Back out accidental
	commit of inserted g_assert(!isnan(bezier coordinate)).  (Having a NaN
	bezier coordinate is usually a problem, perhaps worth warning about,
	but it's hard to make it impossible, so it shouldn't be g_assert.)
	Reported by bulia byak.

2003-12-21  MenTaLguY <mental@rydia.net>

	* Finally cleaned up the linker issues

2003-12-21  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/Makefile.am (inkscapelib_src):
	src/livarot/Makefile.am (libvarot_a_SOURCES): 
	Add some header files to SOURCES, so that `make distcheck' works.

	* src/style.cpp (sp_style_read_ipaint): Skip leading whitespace.
	Fixes #853804.  Improves rendering of Dia-exported SVG.

2003-12-20  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/sp-spiral.cpp (sp_spiral_set): Fix clamping of t0 value: change
	min from -1.0 to 0.0 as per all other t0 clamps and as required in some
	circumstances by sp_spiral_get_xy.
	(sp_spiral_fit_and_draw): Avoid useless adjacent dups in point sampling.

	(sp_spiral_fit_and_draw, sp_spiral_set_shape): Call proper tangent
	routine instead of trying to estimate from samples.
	(sp_spiral_get_tangent): New function.

	* src/helper/bezier-utils.cpp (sp_bezier_fit_cubic): Implement as a call
	to sp_bezier_fit_cubic_r.